--- a/style.css
+++ b/style.css
@@ -126,8 +126,6 @@ body {
 /* <-------------------------------Mobile----------------------------------- */
 
 @media (max-width: 1000px) {
-  
-
   /* Adjust font sizes */
   h1 {
     font-size: 36px;
@@ -150,3 +148,27 @@ body {
   }
 }
 
+h1 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 50px;
+}
+
+p {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.actions {
+  display: flex;
+  justify-content: center;
+}
+
+.actions button {
+  padding: 8px 16px;
+  font-size: 30px;
+  border-radius: 10px;
+  background-color: #2aa32a;
+  color: white;
+}
